Fix for xml reader, adding previous command

--- a/diff/diff.html
+++ b/diff/diff.html
@@ -1,13 +1,25 @@
 <link rel='stylesheet' type='text/css' href='/home/jeff/rcwatcher/diff/stylediff.css' />
 <table><tr>
-  <td colspan="2" class="diff-lineno">Line 22:</td>
-  <td colspan="2" class="diff-lineno">Line 22:</td>
+  <td colspan="2" class="diff-lineno">Line 29:</td>
+  <td colspan="2" class="diff-lineno">Line 29:</td>
 </tr>
 <tr>
   <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>}}</div></td>
+  <td class="diff-context"></td>
   <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>}}</div></td>
+  <td class="diff-context"></td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>==Life and career==</div></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>==Life and career==</div></td>
+</tr>
+<tr>
+  <td class="diff-marker">−</td>
+  <td class="diff-deletedline"><div>She was born on February 2, 1990 in Rosario, Argentina. She has two younger brothers: Agustín and Ignacio. Since childhood she practiced gymnastics, swimming, dance, musical theater, singing, and acting. She attended the <span class="diffchange diffchange-inline">Institute</span> Inmaculada de Castelar, besides going to a school of musical theatre called "Broadway Street" where <span class="diffchange diffchange-inline">she</span> participated in several plays as ''Alice in Wonderland'' in the Astral theater.<span class="diffchange diffchange-inline">{{Citation needed|date=April 2013}}</span></div></td>
+  <td class="diff-marker">+</td>
+  <td class="diff-addedline"><div>She was born on February 2, 1990 in Rosario, Argentina. She has two younger brothers: Agustín and Ignacio. Since childhood she practiced gymnastics, swimming, dance, musical theater, singing, and acting. She attended the <span class="diffchange diffchange-inline">Instituto</span> Inmaculada de Castelar, besides going to a school of musical theatre called "Broadway Street" where <span class="diffchange diffchange-inline">he</span> participated in several plays as ''Alice in Wonderland'' in the Astral theater.</div></td>
 </tr>
 <tr>
   <td class="diff-marker">&#160;</td>
@@ -17,9 +29,21 @@
 </tr>
 <tr>
   <td class="diff-marker">−</td>
-  <td class="diff-deletedline"><div>'''''Natasha''''' is <span class="diffchange diffchange-inline">an</span> EP by [[Pig Destroyer]], released in 2008 by Relapse Records. The EP consists of one song, simply named [[Natasha]], originally included on special editions of ''[[Terrifyer]]'' as a DVD. The song is 37:55 in length, and consists of multiple songs and audio samples. Unlike Pig Destroyer's traditional grindcore sound, this showcases a doom, drone and dark ambient side of Pig Destroyer.</div></td>
+  <td class="diff-deletedline"><div>In 2007, Clari was one of the twenty selected to participate in the reality show ''High School Musical: La Selección'', which was broadcast on Channel 13 and Disney Channel in Argentina. She was eliminated in the tenth week,<span class="diffchange diffchange-inline">&lt;ref&gt;{{cite web |url=http://clari-highschoolmusical-laseleccion.blogspot.com/2007/08/mara-clara-alonso-o-ariel-leone.html |title=María Clara Alonso o Ariel Leone |date=August 25, 2007 |work=clari-highschoolmusical-laseleccion.blogspot.com/ |accessdate=April 19, 2013}}&lt;/ref&gt;</span> however was called to be part of the tour where she gave concerts in much of the country and played "Clari" in <span class="diffchange diffchange-inline">the</span> ''[[High School Musical]]''<span class="diffchange diffchange-inline">′s Argentine version</span>. Because it caught the attention of the producers of ''Zapping Zone'' stamped Walt Disney Company and during the tour in the city of La Rioja was called to conduct the program with Daniel Martins and Carolina Ibarra.</div></td>
   <td class="diff-marker">+</td>
-  <td class="diff-addedline"><div>'''''Natasha''''' is <span class="diffchange diffchange-inline">a</span> EP by [[Pig Destroyer]], released in 2008 by Relapse Records. The EP consists of one song, simply named [[Natasha]], originally included on special editions of ''[[Terrifyer]]'' as a DVD. The song is 37:55 in length, and consists of multiple songs and audio samples. Unlike Pig Destroyer's traditional grindcore sound, this showcases a doom, drone and dark ambient side of Pig Destroyer.</div></td>
+  <td class="diff-addedline"><div>In 2007, Clari was one of the twenty selected to participate in the reality show ''High School Musical: La Selección'', which was broadcast on Channel 13 and Disney Channel in Argentina. She was eliminated in the tenth week, however was called to be part of the tour where she gave concerts in much of the country and played "Clari" in <span class="diffchange diffchange-inline">Argentina version of</span> ''[[High School Musical]]''. Because it caught the attention of the producers of ''Zapping Zone'' stamped Walt Disney Company and during the tour in the city of La Rioja was called to conduct the program with Daniel Martins and Carolina Ibarra.</div></td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+</tr>
+<tr>
+  <td class="diff-marker">−</td>
+  <td class="diff-deletedline"><div>In mid-2007, she started as a reporter ''Zapping Zone'' program. Since 2008 she became the <span class="diffchange diffchange-inline">hostess</span> alongside Daniel Martins and the program was a success in its time slot and was issued to other Latin American countries such as Peru, Uruguay, Venezuela, Colombia, Paraguay, Bolivia, Ecuador and Chile.</div></td>
+  <td class="diff-marker">+</td>
+  <td class="diff-addedline"><div>In mid-2007, she started as a reporter ''Zapping Zone'' program. Since 2008 she became the <span class="diffchange diffchange-inline">main presenter</span> alongside Daniel Martins and the program was a success in its time slot and was issued to other Latin American countries such as Peru, Uruguay, Venezuela, Colombia, Paraguay, Bolivia, Ecuador and Chile.</div></td>
 </tr>
 <tr>
   <td class="diff-marker">&#160;</td>
@@ -29,8 +53,76 @@
 </tr>
 <tr>
   <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>==Track listing==</div></td>
+  <td class="diff-context"><div>She participated in the [[Disney Channel Games#Disney Channel Games 2008|Disney Channel Games 2008]] which were held in the week of April 27 to May 2, 2008. In Latin America were issued from September 5 to October 3. She was part of the green team, "The Cyclones" alongside international Disney stars as: [[Jason Dolley]], [[Jennifer Stone]], [[Chelsea Staub]], [[Joe Jonas]], [[Brad Kavanagh]], [[Dylan Sprouse]] and team captain [[David Henrie]]. Her team was third with 55&amp;nbsp;points.</div></td>
   <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>==Track listing==</div></td>
+  <td class="diff-context"><div>She participated in the [[Disney Channel Games#Disney Channel Games 2008|Disney Channel Games 2008]] which were held in the week of April 27 to May 2, 2008. In Latin America were issued from September 5 to October 3. She was part of the green team, "The Cyclones" alongside international Disney stars as: [[Jason Dolley]], [[Jennifer Stone]], [[Chelsea Staub]], [[Joe Jonas]], [[Brad Kavanagh]], [[Dylan Sprouse]] and team captain [[David Henrie]]. Her team was third with 55&amp;nbsp;points.</div></td>
+</tr>
+<tr>
+  <td colspan="2" class="diff-lineno">Line 41:</td>
+  <td colspan="2" class="diff-lineno">Line 41:</td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>In 2010, she starred in the Disney Channel short-series ''Highway: Rodando la Aventura'' which is the fourth original production of Disney Channel Latin America. The series tells the story of a group of eight friends in a motorhome traveling throughout Latin America in search of a dream. Clari played a young perfectionist, obsessed with cleanliness and order.&lt;ref name="HW"&gt;{{cite web |url=http://www.youtube.com/watch?v=kMiOTjuXQ_0|title=Personaje de Clari en Highway: Rodando la aventura.|work=Youtube.com|language=Spanish}}&lt;/ref&gt;</div></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>In 2010, she starred in the Disney Channel short-series ''Highway: Rodando la Aventura'' which is the fourth original production of Disney Channel Latin America. The series tells the story of a group of eight friends in a motorhome traveling throughout Latin America in search of a dream. Clari played a young perfectionist, obsessed with cleanliness and order.&lt;ref name="HW"&gt;{{cite web |url=http://www.youtube.com/watch?v=kMiOTjuXQ_0|title=Personaje de Clari en Highway: Rodando la aventura.|work=Youtube.com|language=Spanish}}&lt;/ref&gt;</div></td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+</tr>
+<tr>
+  <td class="diff-marker">−</td>
+  <td class="diff-deletedline"><div>Since 2010 works as a voice actress in the Disney Channel series ''[[Fish Hooks|Pecezuelos]]'', where makes the character's voice, Bea.<span class="diffchange diffchange-inline">&lt;ref&gt;{{cite web |url=http://thewonderfuldisneyworld.wordpress.com/2010/12/03/llega-pecezuelos-la-ultima-apuesta-animada-de-disney-channel/ |title=Llega Pecezuelos: la última apuesta animada de Disney Channel |publisher=thewonderfuldisneyworld.wordpress.com/ |accessdate=April 19, 2013 |laguage=Spanish }}&lt;/ref&gt;</span></div></td>
+  <td class="diff-marker">+</td>
+  <td class="diff-addedline"><div>Since 2010 works as a voice actress in the Disney Channel series ''[[Fish Hooks|Pecezuelos]]'', where makes the character's voice, Bea.</div></td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>On August 2010, she traveled to São Paulo, Brazil to shoot a participation in the double episode in the Disney Channel series "Cuando toca la campana", where she played Jennifer, a new student in the final days of the school year. The first part of the episode aired on Disney Channel on December 1, 2011, while the second part of the episode was aired on December 8, 2011.</div></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>On August 2010, she traveled to São Paulo, Brazil to shoot a participation in the double episode in the Disney Channel series "Cuando toca la campana", where she played Jennifer, a new student in the final days of the school year. The first part of the episode aired on Disney Channel on December 1, 2011, while the second part of the episode was aired on December 8, 2011.</div></td>
+</tr>
+<tr>
+  <td colspan="2" class="diff-lineno">Line 49:</td>
+  <td colspan="2" class="diff-lineno">Line 49:</td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>On March 2012, she appeared in an episode in the Disney XD series Latin America Peter Punk, where she played "Piranha" a very determined teenage punk with a strong personality.</div></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>On March 2012, she appeared in an episode in the Disney XD series Latin America Peter Punk, where she played "Piranha" a very determined teenage punk with a strong personality.</div></td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+</tr>
+<tr>
+  <td class="diff-marker">−</td>
+  <td class="diff-deletedline"><div>She currently stars on the Disney Channel series ''[[Violetta (TV series)|Violetta]]'' where plays Angie, the [[Violetta (TV series)|title character]]'s aunt.<span class="diffchange diffchange-inline">&lt;ref&gt;{{cite web |url=http://www.disneylatino.com/disneychannel/series/violetta/personajes.php#7|1 |title=Angie |publisher=disneylatino.com |accessdate=April 19, 2013 |language=Spanish }}&lt;/ref&gt;</span></div></td>
+  <td class="diff-marker">+</td>
+  <td class="diff-addedline"><div>She currently stars on the Disney Channel series ''[[Violetta (TV series)|Violetta]]'' where plays Angie, the [[Violetta (TV series)|title character]]'s aunt.</div></td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"></td>
+</tr>
+<tr>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>== Filmography ==</div></td>
+  <td class="diff-marker">&#160;</td>
+  <td class="diff-context"><div>== Filmography ==</div></td>
 </tr>
 </table>
