Change to css, adding view article feature

--- a/diff/diff.html
+++ b/diff/diff.html
@@ -1,36 +1,28 @@
-<meta charset='utf-8'><link rel='stylesheet' type='text/css' href='/home/jeff/python/rcwatcher/diff/stylediff.css' />
+<meta charset='utf-8'><link rel='stylesheet' type='text/css' href='/home/jeff/rcwatcher/diff/stylediff.css' />
 <table><tr>
-  <td colspan="2" class="diff-lineno">Line 21:</td>
-  <td colspan="2" class="diff-lineno">Line 21:</td>
+  <td colspan="2" class="diff-lineno">Line 92:</td>
+  <td colspan="2" class="diff-lineno">Line 92:</td>
 </tr>
 <tr>
   <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>{{cite web |url=http://www.conservativeparty.org.nz/ |title=Find Out More |publisher=Conservative Party of New Zealand |accessdate=2011-08-03}}</div></td>
+  <td class="diff-context"><div>[[File:Information.svg|25px|alt=Information icon]] Hello, I'm [[User:Materialscientist|Materialscientist]]. I wanted to let you know that I undid one or more of [[Special:Contributions/107.0.15.66|your recent contributions]]&amp;nbsp;to [[:12155 Hyginus]] because it didn't appear constructive. If you think I made a mistake, or if you have any questions, you can leave me a message on [[User_talk:Materialscientist|my talk page]]. &lt;!-- Template:uw-vandalism1 --&gt;&lt;!-- Template:uw-cluebotwarning1 --&gt;   [[User:Materialscientist|Materialscientist]] ([[User talk:Materialscientist|talk]]) 13:45, 2 May 2013 (UTC)</div></td>
   <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>{{cite web |url=http://www.conservativeparty.org.nz/ |title=Find Out More |publisher=Conservative Party of New Zealand |accessdate=2011-08-03}}</div></td>
+  <td class="diff-context"><div>[[File:Information.svg|25px|alt=Information icon]] Hello, I'm [[User:Materialscientist|Materialscientist]]. I wanted to let you know that I undid one or more of [[Special:Contributions/107.0.15.66|your recent contributions]]&amp;nbsp;to [[:12155 Hyginus]] because it didn't appear constructive. If you think I made a mistake, or if you have any questions, you can leave me a message on [[User_talk:Materialscientist|my talk page]]. &lt;!-- Template:uw-vandalism1 --&gt;&lt;!-- Template:uw-cluebotwarning1 --&gt;   [[User:Materialscientist|Materialscientist]] ([[User talk:Materialscientist|talk]]) 13:45, 2 May 2013 (UTC)</div></td>
 </tr>
 <tr>
   <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>&lt;/ref&gt; [[Colin Craig]], who polled third (with about 8.7% of the vote) in the [[Auckland mayoral election, 2010|2010 Auckland mayoral election]],&lt;ref&gt;</div></td>
+  <td class="diff-context"><div>:''If this is a [[Network address translation|shared IP address]], and you did not make the edits, consider [[Wikipedia:Why create an account?|creating an account]] for yourself so you can avoid further irrelevant notices.''&lt;!-- Template:Shared IP advice --&gt;</div></td>
   <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>&lt;/ref&gt; [[Colin Craig]], who polled third (with about 8.7% of the vote) in the [[Auckland mayoral election, 2010|2010 Auckland mayoral election]],&lt;ref&gt;</div></td>
+  <td class="diff-context"><div>:''If this is a [[Network address translation|shared IP address]], and you did not make the edits, consider [[Wikipedia:Why create an account?|creating an account]] for yourself so you can avoid further irrelevant notices.''&lt;!-- Template:Shared IP advice --&gt;</div></td>
 </tr>
 <tr>
   <td class="diff-marker">−</td>
-  <td class="diff-deletedline"><div>Craig received 42,598 votes<span class="diffchange diffchange-inline">, some distance</span> behind Len Brown (237,487 votes) and John Banks (171,542 votes): </div></td>
-  <td class="diff-marker">+</td>
-  <td class="diff-addedline"><div>Craig received 42,598 votes behind Len Brown (237,487 votes) and John Banks (171,542 votes): </div></td>
+  <td class="diff-deletedline"></td>
+  <td colspan="2" class="diff-empty">&#160;</td>
 </tr>
 <tr>
-  <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>{{cite web</div></td>
-  <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>{{cite web</div></td>
-</tr>
-<tr>
-  <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>|url         = http://www.aucklandcouncil.govt.nz/EN/AboutCouncil/HowCouncilWorks/Elections/Pages/Finalresults-Mayor.aspx</div></td>
-  <td class="diff-marker">&#160;</td>
-  <td class="diff-context"><div>|url         = http://www.aucklandcouncil.govt.nz/EN/AboutCouncil/HowCouncilWorks/Elections/Pages/Finalresults-Mayor.aspx</div></td>
+  <td class="diff-marker">−</td>
+  <td class="diff-deletedline"><div>[[File:Information.svg|25px|alt=Information icon]] Hello, I'm [[User:Snow Blizzard|Snow Blizzard]]. I wanted to let you know that I undid one of [[Special:Contributions/107.0.15.66|your recent contributions]],&amp;nbsp;such as the one you made with &lt;span class="plainlinks"&gt;[http://en.wikipedia.org/wiki/Colombian_cuisine?diff=555072816 this edit]&lt;/span&gt; to [[:Colombian cuisine]], because it didn’t appear constructive to me. If you think I made a mistake, or if you have any questions, you can leave me a message on [[User_talk:Snow Blizzard|my talk page]]. Thanks, &lt;!-- Template:Huggle/warn-1 --&gt;&lt;!-- Template:uw-vandalism1 --&gt;[[User:Snow Blizzard|&lt;span style="font-family:Kristen ITC; color:black"&gt;Snow&lt;/span&gt;]] [[User talk: Snow Blizzard|&lt;span style="font-family:Kristen ITC; color:blue"&gt;Blizzard&lt;/span&gt;]] 16:07, 14 May 2013 (UTC)</div></td>
+  <td colspan="2" class="diff-empty">&#160;</td>
 </tr>
 </table>
